# anvil

./: .gitignore  .gitmessage  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  TOOLS.md  Taskfile.yml  bench_provider_files.txt  deny.toml  iteration_test.txt
.cargo/: config.toml
.claude/skills/review-self/: SKILL.md  hooks.json
.githooks/: commit-msg  pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  feature-request.md  feature_request.md  platform-change.md
.github/workflows/: ci.yml
benchmarks/: README.md  run.sh
crates/benchmark/: Cargo.toml
crates/benchmark/src/: main.rs  report.rs  runner.rs  scoring.rs  tasks.rs
crates/cli/: AGENTS.md  Cargo.toml
crates/cli/src/: agent.rs  instructions.rs  lib.rs  main.rs  ui.rs
crates/cli/tests/: cli_surface.rs  e2e_tests.rs
crates/core/: AGENTS.md  Cargo.toml
crates/core/src/: auth.rs  config.rs  error.rs  lib.rs  message.rs  provider.rs  session.rs
crates/evolution/: SAFETY_GATES.md
crates/evolution/src/: defaults.rs  engine.rs  lib.rs  safe_applier.rs  tests.rs  traits.rs  types.rs
crates/gateway/src/: server.rs
crates/github/: Cargo.toml
crates/github/src/: config.rs  events.rs  lib.rs  mention.rs  paperclip.rs  server.rs  signature.rs
crates/memory/: AGENTS.md  Cargo.toml
crates/memory/migrations/: 0001_init.sql
crates/memory/src/: db.rs  episode.rs  evolution.rs  lib.rs
crates/tools/: AGENTS.md  Cargo.toml
crates/tools/src/: lib.rs  (+3 more)
crates/tui/: Cargo.toml
doc/: F-SERIES-CONVENTION.md
logs/: session_end.json  session_start.json
scripts/: README.md  check-commit-cadence.sh  generate-change-history.sh  run-evolution-benchmarks.sh  self_improve_loop.sh  setup-hooks.sh
(+27 files in other folders)
